<resources>
    <string name="app_name">TaskShare</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">TaskShare</string>
    <string name="title_fragment_allTasks">All tasks</string>
    <string name="title_fragment_favoriteTasks">Favorite tasks</string>
    <string name="title_fragment_overdueTasks">Overdue tasks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_submenuheader_general_title">Tasks</string>
    <string name="navigation_drawer_submenu_general_allTasks">All tasks</string>
    <string name="navigation_drawer_submenu_general_favoriteTasks">Favorite</string>
    <string name="navigation_drawer_submenu_general_overdueTasks">Overdue</string>
    <string name="navigation_drawer_submenu_group_title">Groups (shared tasks)</string>
    <string name="navigation_drawer_submenu_group_addGroup">Create new group...</string>
    <string name="navigation_drawer_menu_header_settings">Settings</string>
    <string name="navigation_drawer_menu_item_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_task">Add task</string>
    <string name="title_activity_add_task_data">AddTaskDataActivity</string>
    <string name="title_activity_user_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register_user">REGISTER</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_button_mail_password">LOGIN (EMAIL/PASSWORD)</string>
    <string name="login_button_phone">LOGIN BY PHONE NUMBER</string>
    <string name="textview_tvIntro_text">Please add the additional data, so that your friends are able to find you and help you get your stuff done!</string>
    <string name="textview_tvName_text">Name:</string>
    <string name="textview_tvMail_text">Mail:</string>
    <string name="edittext_etName_hint">Add your name...</string>
    <string name="edittext_etMail_hint">Add your mail adress...</string>
    <string name="button_btnSave_text">Save</string>
    <string name="register_button">REGISTER</string>
    <string name="search_content">search..</string>
    <string name="title_activity_task_data_details">TaskDataDetails</string>
    <string name="title_activity_user_registration">ACCOUNT REGISTRATION</string>
    <string name="dummy_task_content">Welcome to the TaskShare app!</string>
    <string name="dummy_task_key">dummy_data_key</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="textview_groupName_text">Group name:</string>
    <string name="textview_groupName_hint">type in a group name...</string>
    <string name="button_addMember_text">Add member...</string>
    <string name="settings_header_DueDateFunction">Due date functions</string>
    <string name="settings_header_AlarmNotification">Alarm Notification</string>
    <string name="settings_switch_duedate">Due date</string>
    <string name="settings_switch_alarm">Alarm Notification</string>
    <string name="settings_edittext_warning">Warning prior to deadline</string>
    <string name="settings_days">day(s)</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main_test">MainActivityTest</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_add_group">Add Group...</string>
    <string name="title_activity_group_details">GroupDetailsActivity</string>
    <string name="title_activity_add_group_task">AddGroupTaskActivity</string>
    <string name="title_activity_login_with_phone">LoginWithPhoneActivity</string>
    <string name="title_activity_user_registration_add_data">UserRegistrationAddData</string>
    <string name="title_auth_activity">Auth UI demo</string>
    <string name="title_firestore_activity">Cloud Firestore Demo</string>
    <string name="title_realtime_database_activity">Real-time database demo</string>
    <string name="title_storage_activity">Storage Image Demo</string>
    <string name="desc_auth">Demonstrates the Firebase Auth UI flow, with customization options.</string>
    <string name="desc_firestore">Demonstrates using a FirestoreRecyclerAdapter to load data from Cloud Firestore into a RecyclerView for a basic chat app.</string>
    <string name="desc_realtime_database">Demonstrates using a FirebaseRecyclerAdapter to load data from Firebase Database into a RecyclerView for a basic chat app.</string>
    <string name="desc_storage">Demonstrates displaying an image from Cloud Storage using Glide.</string>
    <string name="launch_title">FirebaseUI Auth Demo</string>
    <string name="sign_in_start">Start</string>
    <string name="providers_header">Auth providers</string>
    <string name="providers_google">Google</string>
    <string name="providers_facebook">Facebook</string>
    <string name="providers_twitter">Twitter</string>
    <string name="providers_email">Email</string>
    <string name="providers_phone">Phone</string>
    <string name="theme_header">Theme</string>
    <string name="theme_default">Default theme</string>
    <string name="theme_purple">Purple Theme</string>
    <string name="theme_green">Green Theme</string>
    <string name="theme_dark">Dark Theme</string>
    <string name="logo_header">Logo</string>
    <string name="logo_firebase">Firebase Auth</string>
    <string name="logo_google">Google</string>
    <string name="logo_none">None</string>
    <string name="tos_header">Terms of Service URL</string>
    <string name="tos_google">Google</string>
    <string name="tos_firebase">Firebase</string>
    <string name="pp_header">Privacy Policy URL</string>
    <string name="pp_google">Google</string>
    <string name="pp_firebase">Firebase</string>
    <string name="google_scopes_header">Example extra Google scopes</string>
    <string name="google_scope_drive_file">Drive File</string>
    <string name="google_scope_youtube_data">Youtube data</string>
    <string name="facebook_permissions_header">Example extra Facebook permissions</string>
    <string name="facebook_permission_friends">Friends</string>
    <string name="facebook_permission_photos">Photos</string>
    <string name="options_header">Other Options</string>
    <string name="options_enable_credential_selector">Enable Smart Lock\'s credential selector</string>
    <string name="options_enable_hint_selector">Enable Smart Lock\'s hint selector</string>
    <string name="options_allow_new_email_acccount">Allow new account creation</string>
    <string name="options_require_name">Require first/last name with email accounts.</string>
    <string name="configuration_required">Configuration required - see README.md</string>
    <string name="google_label_missing_config">Google configuration missing</string>
    <string name="facebook_label_missing_config">Facebook configuration missing</string>
    <string name="twitter_label_missing_config">Twitter configuration missing</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>
    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="used_providers">Providers used: %s</string>
    <string name="idp_token">IDP Token</string>
    <string name="idp_secret">IDP Secret</string>
    <string name="choose_image">Choose Image</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="send">Send</string>
    <string name="accessibility_downloaded_image">Downloaded image</string>
    <string name="rational_image_perm">This sample will read an image from local storage to upload to Cloud Storage.</string>
    <string name="start_chatting">No messages. Start chatting at the bottom!</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_in">Signed In</string>
    <string name="anonymous_auth_failed_msg">
        Anonymous authentication failed, various components of the demo will not work.
        Make sure your device is online and that Anonymous Auth is configured in your Firebase project
        (https://console.firebase.google.com/project/_/authentication/providers)
    </string>
    <string name="hint_message">Say something…</string>
</resources>