<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="android_development.taskshare.AddGroup"
    tools:showIn="@layout/activity_add_group">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvGroupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_groupName_text"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/etGroupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textview_groupName_hint"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="42dp" />

        <Button
            android:id="@+id/btnAddMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_addMember_text"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="139dp" />

        <ListView
            android:id="@+id/lvGroupMember"
            android:layout_width="368dp"
            android:layout_height="244dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="203dp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
